<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".hall"
    android:background="@color/back">


    <ImageView
        android:id="@+id/indoorhall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.075"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.066"
        app:srcCompat="@drawable/indoorwhall" />

    <ImageView
        android:id="@+id/odoorhall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.072"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.264"
        app:srcCompat="@drawable/outdwhall" />

    <ImageView
        android:id="@+id/confhall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.072"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.499"
        app:srcCompat="@drawable/bconferhall" />

    <ImageView
        android:id="@+id/kidsphall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.072"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.713"
        app:srcCompat="@drawable/kidsparhall" />

    <TextView
        android:id="@+id/hty1"
        android:layout_width="199dp"
        android:layout_height="34dp"
        android:fontFamily="cursive"
        android:text="@string/hall_type1"
        android:textColor="@color/rh"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.966"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.061" />

    <TextView
        android:id="@+id/hllty1in"
        android:layout_width="185dp"
        android:layout_height="26dp"
        android:fontFamily="monospace"
        android:text="@string/hallty1in"
        android:textColor="@color/txc"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.907"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.109" />

    <TextView
        android:id="@+id/hall1p"
        android:layout_width="85dp"
        android:layout_height="22dp"
        android:background="#007BFF"
        android:text="@string/hall1P"
        android:textColor="#F4F3F3"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.782"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.169" />

    <TextView
        android:id="@+id/hllty2in"
        android:layout_width="185dp"
        android:layout_height="26dp"
        android:fontFamily="monospace"
        android:text="@string/hallty2in"
        android:textColor="@color/txc"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.907"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.299" />

    <TextView
        android:id="@+id/hall2p"
        android:layout_width="85dp"
        android:layout_height="22dp"
        android:layout_marginTop="12dp"
        android:background="#007BFF"
        android:text="@string/hall2p"
        android:textColor="@color/back"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.776"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/hllty2in"
        app:layout_constraintVertical_bias="0.015" />

    <TextView
        android:id="@+id/htp3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="cursive"
        android:text="@string/htp3"
        android:textColor="@color/rh"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.75"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.452" />

    <TextView
        android:id="@+id/hllty3in"
        android:layout_width="182dp"
        android:layout_height="37dp"
        android:fontFamily="monospace"
        android:text="@string/htp3inf"
        android:textColor="@color/txc"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.895"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/hall3p"
        android:layout_width="85dp"
        android:layout_height="22dp"
        android:layout_marginStart="225dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="256dp"
        android:background="#007BFF"
        android:text="@string/hall3p"
        android:textColor="@color/back"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.164"
        app:layout_constraintStart_toStartOf="@+id/confhall"
        app:layout_constraintTop_toBottomOf="@+id/hllty3in"
        app:layout_constraintVertical_bias="0.04" />

    <TextView
        android:id="@+id/htp2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:fontFamily="cursive"
        android:text="@string/htype2"
        android:textColor="@color/rh"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.967"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/hall1p"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/hty3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginBottom="200dp"
        android:fontFamily="cursive"
        android:text="@string/pht4"
        android:textColor="@color/rh"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.737"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/hall3p"
        app:layout_constraintVertical_bias="0.196" />

    <TextView
        android:id="@+id/hty4in"
        android:layout_width="182dp"
        android:layout_height="37dp"
        android:fontFamily="monospace"
        android:text="@string/htp4inf"
        android:textColor="@color/txc"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.842"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/hty3"
        app:layout_constraintVertical_bias="0.073" />

    <TextView
        android:id="@+id/hall4p"
        android:layout_width="85dp"
        android:layout_height="22dp"
        android:background="#007BFF"
        android:text="@string/hall4p"
        android:textColor="@color/back"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.782"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.775" />

    <Button
        android:id="@+id/hbbutton"
        android:layout_width="175dp"
        android:layout_height="57dp"
        android:background="@color/butc"
        android:fontFamily="serif"
        android:text="@string/hbbutton1"
        android:textColor="@color/lbtc"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.976" />


</androidx.constraintlayout.widget.ConstraintLayout>